[PN-16950] - Added new API to get delivery informations
