# docs/openapi/pn-timeline-service-private.yaml
@@ -365,6 +365,45 @@ paths:
             application/problem+json:
               schema:
                 $ref: 'remote-refs.yaml#/components/schemas/Problem'
+  /timeline-service-private/delivery-information/{iun}:
+    get:
+      summary: Informazioni di spedizione notifica
+      description: >-
+        Ottiene le informazioni di spedizione del destinatario della notifica, il suo stato, la modalità di consegna,
+        la data di perfezionamento e la data di schedulazione dell'invio analogico.
+      tags:
+        - timeline-controller
+      operationId: getDeliveryInformation
+      parameters:
+        - name: iun
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: recIndex
+          in: query
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/DeliveryInformationResponse'
+        '400':
+          description: Invalid input
+          content:
+            application/problem+json:
+              schema:
+                $ref: 'remote-refs.yaml#/components/schemas/Problem'
+        '500':
+          description: Internal Server Error
+          content:
+            application/problem+json:
+              schema:
+                $ref: 'remote-refs.yaml#/components/schemas/Problem'
 
 components:
   schemas:
@@ -396,6 +435,25 @@ components:
           type: array
           items:
             $ref: './schemas-pn-timeline-service.yaml#/components/schemas/TimelineElement'
+    DeliveryInformationResponse:
+      type: object
+      required:
+        - deliveryMode
+        - isNotificationCancelled
+      properties:
+        deliveryMode:
+          $ref: './schemas-pn-timeline-service.yaml#/components/schemas/DeliveryMode'
+        refinementOrViewedDate:
+          type: string
+          description: Data e ora di perfezionamento per decorrenza termini o per presa visione della notifica
+          format: date-time
+        schedulingAnalogDate:
+          type: string
+          description: Data e ora di schedulazione invio analogico
+          format: date-time
+        isNotificationCancelled:
+          type: boolean
+          description: Indica se la notifica è stata cancellata
     NotificationStatus:
       type: string
       description: >
